--- a/src/app/app-nasa-asteroids/app-nasa-asteroids.component.html
+++ b/src/app/app-nasa-asteroids/app-nasa-asteroids.component.html
@@ -1,6 +1,6 @@
 <div>asteroids</div>
 <div *ngFor="let date of asteroids" (click)="selectDate($event.target.textContent)"
-     [ngClass]="{selectedDate: checkDate(date.date)}">
+     [ngClass]="{selectedDate: checkDate(date.date), 'date-div': true}">
   {{ date.date }}
   <div *ngIf="checkDate(date.date)">
     <div *ngFor="let asteroid of date.asteroids">
